--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   align-items: center;
   padding: 30px;
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+}
