--- a/src/css/detailModal.css
+++ b/src/css/detailModal.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 999;
 }
 
 .modal-content {
@@ -16,29 +16,42 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 400px;
+  max-width: 350px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
 .modal-content h2 {
-  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.modal-content strong {
+  color: #007bff;
+  padding: 5px;
+  padding-left: 20px;
+  font-size: 18px;
 }
 
 .modal-content p {
+  width: 300px;
   margin: 10px 0;
+  text-align: left;
+  font-size: 18px;
 }
 
 .modal-content button {
-  margin-top: 20px;
+  margin-top: 10px;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #ff4444;
   color: white;
-  border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .modal-content button:hover {
-  background-color: #0056b3;
+  background-color: #cc0000;
 }
