--- a/src/css/groupModal.css
+++ b/src/css/groupModal.css
@@ -43,7 +43,7 @@ ul {
   align-items: center;
   padding: 10px;
   margin: 5px 0;
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-bottom: 1px solid #ccc;
   border-radius: 5px;
   width: 100%;
@@ -52,9 +52,13 @@ ul {
 .deleteButton {
   background: none;
   border: none;
-  color: red;
+  color: black;
   cursor: pointer;
   font-size: 16px;
+}
+
+.deleteButton:hover {
+  color: red;
 }
 
 .addGroup {
